--- a/css/app.css
+++ b/css/app.css
@@ -7,10 +7,6 @@ img.logo {
 img {
 	/* max-height: 75vh; */
 }
-figure.video,
-video {
-	max-width: 100%;
-}
 header,
 footer {
 	padding: 1rem 0;
@@ -33,4 +29,25 @@ footer {
 .grid-container {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
+}
+.byline {
+	font-size: 0.85rem;
+	color: #999;
+}
+/* VIDEO, local */
+figure.video,
+video {
+	max-width: 100%;
+}
+/* VIDEO, youtube */
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+}
+.video-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
